Bug 758991 - Don't optimize singleton property accesses with non-default getters. r=dvander